# fastapi-task-manager

./: .env.example  .gitignore  Dockerfile  README.md  config.py  db.py  deps.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: db.py  deps.py
app/models/: __init__.py  auth.py  tasks.py
app/routes/: auth.py  tasks.py
app/schemas/: tasks.py
app/services/: auth.py  tasks.py
app/utils/: limiter.py
migrations/: env.py
migrations/versions/: 29d97698ba92_initial.py  6e3e4f07dc33_initial.py
models/: __init__.py  auth.py  tasks.py  tasks_tags.py
routes/: auth.py  tags.py  tasks.py
schemas/: auth.py  tags.py  tasks.py
services/: auth.py  tags.py  tasks.py
tests/: conftest.py  test_auth.py  test_tasks.py
utils/: limiter.py
